--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
 .App {
   text-align: center;
 }
-
+.heading{
+  transition: 0.4s ease-in-out;
+  color:white;
+  font-family:Roboto, sans-serif;
+  text-decoration: underline;
+  text-decoration-color: #E11D48;
+}
