--- a/src/pages/Skills.module.css
+++ b/src/pages/Skills.module.css
@@ -6,11 +6,7 @@
     transition: 0.4s ease-in-out;
     color:white;
     font-family:Roboto, sans-serif;
-    color:#17cf97;
+    text-decoration: underline;
+    text-decoration-color: #E11D48;
 }
 
-.Heading:hover{
-      
-    text-decoration: underline;
-    
-}
