--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -10,21 +10,19 @@ nav{
     top:0;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 }
-#nav-menu button:hover{
 
-}
-#nav-menu{
+#nav-menu1{
     display:flex;
     justify-content:center;
     align-items:center;
 }
 
-#nav-menu li{
+#nav-menu1 li{
     list-style:none;
     padding:0px 20px;
     position:relative;
 }
-#nav-menu li {
+#nav-menu1 li {
     font-size:1.3rem;
     font-family:Roboto, sans-serif;
     font-weight:600;
@@ -35,10 +33,10 @@ nav{
     position:absolute;
 }
 
-#nav-menu li:hover{
+#nav-menu1 li:hover{
     color:#E11D48;   
 }
-#nav-menu li:hover::after{
+#nav-menu1 li:hover::after{
     content:"";
     width:30%;
     height:2px;
@@ -58,7 +56,7 @@ nav{
 }
 
 @media screen and (max-width:769px){
-    #nav-menu{
+    #nav-menu1{
         display:flex;
         justify-content:flex-start;
         align-items:flex-start;
@@ -72,10 +70,10 @@ nav{
         padding: 40px 0 0 10px;
         transition:0.5s ease-in-out
     }
-    #nav-menu.active{
+    #nav-menu1.active{
         right:0px;
     }
-    #nav-menu li{
+    #nav-menu1 li{
         margin-bottom:25px;
 
     }
