--- a/src/pages/Skills.module.css
+++ b/src/pages/Skills.module.css
@@ -8,5 +8,9 @@
     font-family:Roboto, sans-serif;
     text-decoration: underline;
     text-decoration-color: #E11D48;
+};
+
+.skills-card-img{
+    
 }
 
