--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -8,6 +8,7 @@ nav{
     position:sticky;
     color:white;
     top:0;
+    z-index:2;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 }
 
