--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -67,7 +67,7 @@ nav{
         right:-300px;
         width:300px;
         height:100vh;
-        background:#2a3239;
+        background:#152242;
         padding: 40px 0 0 10px;
         transition:0.5s ease-in-out
     }
